security: update auth roles and jwt config